# distill

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base.py  ingestion.py  react_research.py  reflection.py  summarization.py
app/models/: __init__.py  schemas.py
app/orchestrator/: __init__.py  orchestrator.py
app/services/: __init__.py  output.py
scripts/: test_api.py
